--- a/demo/index.html
+++ b/demo/index.html
@@ -12,8 +12,7 @@
     <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
     <link rel="import" href="../ct-user-app-consent.html">
 
-      <style is="custom-style" include="user-app-consent-style">
-    </style>
+    <style is="custom-style" include="user-app-consent-style"></style>
   </head>
   <body>
     <ct-user-app-consent
