--- a/user-app-consent-style.html
+++ b/user-app-consent-style.html
@@ -20,11 +20,11 @@
             .consent-paragraph {
             }
             .allow-button {
-                background-color: var(--google-green-500);
+                background-color: green;
                 color: #ffffff;
             }
             .deny-button {
-                background-color: var(--google-red-500);
+                background-color: firebrick;
                 color: #ffffff;
             }
         </style>
