--- a/ct-user-app-consent.html
+++ b/ct-user-app-consent.html
@@ -59,9 +59,9 @@ User app consent form
     <div class="horizontal center-justified layout">
       <paper-material class="box" elevation="1">
         <div class="horizontal center-justified layout">
-          <img class="app-logo" src="[[ _appLogo ]]">
+          <img class="app-logo" src="[[ _clientLogo ]]">
         </div>
-        <p class="consent-paragraph">[[ appName ]] wants to access your [[ domainName ]] account</p>
+        <p class="consent-paragraph">[[ clientName ]] wants to access your [[ domainName ]] account</p>
         <!--<h2>in the following way:</h2>
         <paper-listbox>
           <paper-item>Create, view, edit and delete everything that you can</paper-item>
@@ -81,8 +81,8 @@ User app consent form
       is: 'ct-user-app-consent',
 
       properties: {
-        appId: String,
-        appName: String,
+        clientId: String,
+        clientName: String,
         domainId: String,
         domainName: String,
         next: String
@@ -90,13 +90,13 @@ User app consent form
 
       ready: function() {
         this._domainLogo = 'http://resource.centular.com/' + this.domainId + '/logo.jpg';
-        this._appLogo = 'http://resource.centular.com/' + this.appId + '/logo.jpg';
+        this._clientLogo = 'http://resource.centular.com/' + this.clientId + '/logo.jpg';
       },
 
       _allow: function () {
         this.$.btnAllow.disabled = true;
         this.$.btnDeny.disabled = true;
-        this.$.grantRequest.set( 'params', { "app_id": this.appId, "next": this.next });
+        this.$.grantRequest.set( 'params', { "client_id": this.clientId, "next": this.next });
         this.$.grantRequest.generateRequest();
       },
 
