--- a/ct-user-app-consent.html
+++ b/ct-user-app-consent.html
@@ -89,8 +89,8 @@ User app consent form
       },
 
       ready: function() {
-        this._domainLogo = 'https://resource.centular.com/' + this.domainId + '/logo.jpg';
-        this._clientLogo = 'https://resource.centular.com/' + this.clientId + '/logo.jpg';
+        this._domainLogo = 'https://resource.centular.io/' + this.domainId + '/logo.jpg';
+        this._clientLogo = 'https://resource.centular.io/' + this.clientId + '/logo.jpg';
       },
 
       _allow: function () {
